2023-08-02T16:10:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5741206034 # 3573
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-02
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2743 / 0 2744 / +0 +1

2023-08-01T16:10:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5729207332 # 3567
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2742 / 0 2743 / +0 +1

2023-08-01T12:16:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5726622385 # 3566
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2741 / 0 2742 / +0 +1

2023-08-01T00:50:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5721211519 # 3563
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2740 / 0 2741 / +0 +1

2023-07-31T12:16:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5714544163 # 3560
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-31
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2739 / 0 2740 / +0 +1

2023-07-30T16:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5707171613 # 3555